# genomic_ranges

./: pyproject.toml  pyranges_from_polars.py  pyranges_interopt.py
src/genomic_ranges/: __init__.py  contig_ranges.py  genomic_ranges.py  io.py
src/genomic_ranges/methods/: intersection.py
